# tranrss

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  init.sql  package-lock.json  package.json  pnpm-lock.yaml  rescan.sh  task.md
.agents/rules/: scheme.md
.github/workflows/: docker.yml  pages.yml  tui.yml
backend/: Cargo.toml  rust-toolchain.toml
backend/migrations/: 20240322000000_init.sql  20250409000000_perf_indexes.sql  20250409000001_websub_support.sql  20260513000000_add_share_to_subscriptions.sql  20260603000000_add_access_keys.sql
backend/src/: lib.rs  main.rs  model.rs  route.rs  services.rs  utils.rs
backend/src/model/: access_key.rs  api_config.rs  api_usage.rs  articles.rs  feed.rs  subscriptions.rs  user.rs
backend/src/route/: access_key.rs  articles.rs  fever.rs  greader.rs  jobs.rs  share.rs  subscriptions.rs  translate_api.rs  user.rs
backend/src/services/: ai.rs  api.rs  articles.rs  auth.rs  feeds.rs  jobs.rs  subscription.rs
backend/src/utils/: broadcast_layer.rs  crypto.rs
docs/superpowers/specs/: 2026-06-03-tui-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/public/data/: demo.db
frontend/src/: App.vue  env.d.ts  i18n.ts  main.ts  style.css
frontend/src/components/: ArticleContent.vue  HomeView.vue  LoginView.vue
frontend/src/components/views/: ApiView.vue  ArticleView.vue  QueueView.vue  SettingsView.vue  SubscriptionView.vue
frontend/src/locales/: en.json  zh.json
frontend/src/utils/: api.ts  demo.ts  textLayout.ts
tui/: Cargo.toml
tui/src/: api.rs  api_client.rs  app.rs  config.rs  logging.rs  main.rs  tui_app.rs  ui.rs
tui/src/cli/: api.rs  article.rs  config.rs  cron.rs  job.rs  mod.rs  serve.rs  setup.rs  sub.rs  tui.rs
