[package]
name = "tranrss-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# TUI 框架
ratatui = "0.29"
crossterm = "0.28"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置文件
toml = "0.8"

# 时间处理
chrono = "0.4"

# 错误处理
anyhow = "1"

# 打开浏览器
open = "5"

# 终端清理
ctrlc = "3"
