[package]
name = "tranrss-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
# 后端库
tranrss-backend = { path = "../backend" }

# Web 框架（serve 命令需要）
axum = "0.8.8"

# CLI 框架
clap = { version = "4", features = ["derive"] }

# TUI 框架
ratatui = "0.29"
crossterm = "0.28"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# HTTP 客户端（用于 CLI 直接调用 API）
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 配置文件
toml = "0.8"

# 时间处理
chrono = "0.4"

# 错误处理
anyhow = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTML → 纯文本
html2text = "0.14"

# 打开浏览器
open = "5"

[dev-dependencies]
tempfile = "3"
